Fix alignment and add hover effect to data zone card icon

--- a/nick-react-app/src/Components/DataZoneDisplay.css
+++ b/nick-react-app/src/Components/DataZoneDisplay.css
@@ -54,17 +54,24 @@ p {
 
 .data-zone-card-icon-two{
     display: flex;
-    justify-content: right;
-    align-items: right;
+    justify-content: center;
     margin-left: auto;
     margin-right: 10px;
     margin-top: auto;
     margin-bottom: auto;
-    min-width: 75px;
+    min-width: 50px;
     width: 50px;
     height: 50px;
+    transition: box-shadow 0.3s; 
+    border-radius: 10px; 
+    border: 1px dashed #ccc; 
    
 }
+
+.data-zone-card-icon-two:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25); /* Larger shadow on hover for interactivity */
+}
+
 
 .data-zone-card-text{
 
